@@ -1,7 +1,8 @@
 # -*- Makefile -*-
 
 nobase_include_HEADERS = libHX.h \
-	libHX/ctype_helper.h libHX/defs.h libHX/deque.h libHX/list.h \
+	libHX/ctype_helper.h libHX/defs.h libHX/deque.h libHX/init.h \
+	libHX/list.h \
 	libHX/map.h libHX/misc.h libHX/option.h libHX/proc.h libHX/string.h \
 	libHX/libxml_helper.h libHX/wx_helper.hpp
 
