@@ -5,10 +5,6 @@
 #	include <cstdlib>
 #endif
 #include <libHX.h>
-#include <libHX/defs.h>
-#include <libHX/list.h>
-#include <libHX/misc.h>
-#include <libHX/ctype_helper.h>
 
 #define ZZ 64
 
@@ -16,9 +12,12 @@ int main(void)
 {
 	unsigned long bitmap[HXbitmap_size(unsigned long, 64)];
 
+	if (HX_init() <= 0)
+		abort();
 	printf("sizeof bitmap: %zu, array_size: %zu\n",
 	       sizeof(bitmap), ARRAY_SIZE(bitmap));
 	HXbitmap_set(bitmap, 0);
 	printf(HX_STRINGIFY(1234+2 +2) "," HX_STRINGIFY(ZZ) "\n");
+	HX_exit();
 	return EXIT_SUCCESS;
 }
