@@ -4,6 +4,7 @@
 #include <stdio.h>
 #include <stdlib.h>
 #include <time.h>
+#include <libHX/init.h>
 #include <libHX/misc.h>
 #include "internal.h"
 
@@ -12,6 +13,8 @@ int main(void)
 	struct timespec past, now, delta;
 	unsigned int i;
 
+	if (HX_init() <= 0)
+		abort();
 	for (i = 0; i < 15; ++i)
 		printf("%08x ", HX_irand(0, RAND_MAX));
 	printf("\n");
@@ -36,5 +39,6 @@ int main(void)
 	printf("/ method: %ld.%06ld s\n",
 	       static_cast(long, delta.tv_sec), delta.tv_nsec / 1000);
 
+	HX_exit();
 	return EXIT_SUCCESS;
 }
