@@ -2,6 +2,8 @@
 
 HEAD
 ====
+Changes:
+- add explicit initialize/deinitialize functions HX_init, HX_exit
 
 
 libHX 3.3 (January 20 2010)
